# todotxt-gtd

./: README.md  config.py  justfile  main.py  pyproject.toml  ruff.toml
src/: app_failure.py  config.py  main.py  utils.py
src/cli/: distribute_inbox.py
src/cli_app/: __init__.py  inbox_parser.py
src/impure/: filesystem.py  io.py  user_io.py
src/tasks/: show_task.py  task_entity.py
src/todotxt/: from_file.py  parser.py
