[tool.poetry]
name = "src"
version = "0.1.0"
description = "Assistant for GTD flow in todotxt"
authors = ["Demezy <38487319+Demezy@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
