[tool.poetry]
name = "src"
version = "0.1.0"
description = "Assistant for GTD flow in todotxt"
authors = ["Demezy <38487319+Demezy@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
returns = {extras = ["compatible-mypy"], version = "^0.22.0"}
pyrsistent = "^0.20.0"
mypy = "^1.5"
rapidfuzz = "^3.8.1"
flupy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
strict = true
warn_unreachable = true


